parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement statement_list
Rule 3     statement_list -> statement
Rule 4     statement -> create_stmt
Rule 5     statement -> apply_stmt
Rule 6     statement -> measure_stmt
Rule 7     statement -> select_stmt
Rule 8     statement -> gate_def
Rule 9     statement -> input_stmt
Rule 10    statement -> const_decl
Rule 11    const_decl -> CONST IDENT ASSIGN expr SEMICOLON
Rule 12    create_stmt -> CREATE QUBITS IDENT LBRACKET size_expr RBRACKET SEMICOLON
Rule 13    create_stmt -> CREATE BITS IDENT LBRACKET size_expr RBRACKET SEMICOLON
Rule 14    size_expr -> INT
Rule 15    size_expr -> IDENT
Rule 16    apply_stmt -> APPLY gate_call ON target_list SEMICOLON
Rule 17    gate_call -> IDENT
Rule 18    gate_call -> IDENT LPAREN arg_list RPAREN
Rule 19    input_stmt -> INPUT IDENT SEMICOLON
Rule 20    select_stmt -> SELECT IDENT FROM IDENT where_clause SEMICOLON
Rule 21    where_clause -> WHERE expr
Rule 22    where_clause -> empty
Rule 23    target_list -> single_target target_tail
Rule 24    target_tail -> COMMA single_target target_tail
Rule 25    target_tail -> empty
Rule 26    single_target -> qubit
Rule 27    single_target -> select_expr
Rule 28    single_target -> all_from
Rule 29    all_from -> ALL FROM IDENT
Rule 30    all_from -> ALL FROM IDENT WHERE expr
Rule 31    select_expr -> SELECT IDENT FROM IDENT where_clause
Rule 32    qubit -> IDENT
Rule 33    qubit -> IDENT LBRACKET qubit_index RBRACKET
Rule 34    qubit_index -> INT
Rule 35    qubit_index -> STAR
Rule 36    qubit_index -> INT COLON INT
Rule 37    qubit_index -> MINUS INT
Rule 38    qubit_index -> MINUS INT COLON INT
Rule 39    qubit_index -> MINUS INT COLON MINUS INT
Rule 40    qubit_index -> IDENT
Rule 41    qubit_index -> MINUS IDENT
Rule 42    measure_stmt -> MEASURE target_list ARROW target_list SEMICOLON
Rule 43    measure_stmt -> MEASURE target_list SEMICOLON
Rule 44    gate_def -> GATE IDENT LPAREN param_list RPAREN LBRACE statement_list RBRACE
Rule 45    param_list -> param_tail
Rule 46    param_list -> empty
Rule 47    param_tail -> IDENT
Rule 48    param_tail -> IDENT COMMA param_tail
Rule 49    expr -> expr AND expr
Rule 50    expr -> expr OR expr
Rule 51    expr -> expr EQEQ expr
Rule 52    expr -> expr NE expr
Rule 53    expr -> expr LT expr
Rule 54    expr -> expr GT expr
Rule 55    expr -> expr LE expr
Rule 56    expr -> expr GE expr
Rule 57    expr -> expr PLUS expr
Rule 58    expr -> expr MINUS expr
Rule 59    expr -> expr STAR expr
Rule 60    expr -> expr DIVIDE expr
Rule 61    expr -> expr PERCENT expr
Rule 62    expr -> expr POWER expr
Rule 63    expr -> MINUS expr
Rule 64    expr -> LPAREN expr RPAREN
Rule 65    expr -> INT
Rule 66    expr -> FLOAT
Rule 67    expr -> PI
Rule 68    expr -> IDENT
Rule 69    expr -> SIN LPAREN arg_list RPAREN
Rule 70    expr -> COS LPAREN arg_list RPAREN
Rule 71    expr -> TAN LPAREN arg_list RPAREN
Rule 72    expr -> EXP LPAREN arg_list RPAREN
Rule 73    expr -> LOG LPAREN arg_list RPAREN
Rule 74    expr -> SQRT LPAREN arg_list RPAREN
Rule 75    expr -> ABS LPAREN arg_list RPAREN
Rule 76    expr -> ASIN LPAREN arg_list RPAREN
Rule 77    expr -> ACOS LPAREN arg_list RPAREN
Rule 78    expr -> ATAN LPAREN arg_list RPAREN
Rule 79    expr -> IDENT LPAREN arg_list RPAREN
Rule 80    arg_list -> expr_list
Rule 81    arg_list -> empty
Rule 82    expr_list -> expr
Rule 83    expr_list -> expr COMMA expr_list
Rule 84    empty -> <empty>

Terminals, with rules where they appear

ABS                  : 75
ACOS                 : 77
ALL                  : 29 30
AND                  : 49
APPLY                : 16
ARROW                : 42
ASIN                 : 76
ASSIGN               : 11
ATAN                 : 78
BITS                 : 13
COLON                : 36 38 39
COMMA                : 24 48 83
CONST                : 11
COS                  : 70
CREATE               : 12 13
DIVIDE               : 60
EQEQ                 : 51
EXP                  : 72
FLOAT                : 66
FROM                 : 20 29 30 31
GATE                 : 44
GE                   : 56
GT                   : 54
IDENT                : 11 12 13 15 17 18 19 20 20 29 30 31 31 32 33 40 41 44 47 48 68 79
INPUT                : 19
INT                  : 14 34 36 36 37 38 38 39 39 65
LBRACE               : 44
LBRACKET             : 12 13 33
LE                   : 55
LOG                  : 73
LPAREN               : 18 44 64 69 70 71 72 73 74 75 76 77 78 79
LT                   : 53
MEASURE              : 42 43
MINUS                : 37 38 39 39 41 58 63
NE                   : 52
ON                   : 16
OR                   : 50
PERCENT              : 61
PI                   : 67
PLUS                 : 57
POWER                : 62
QUBITS               : 12
RBRACE               : 44
RBRACKET             : 12 13 33
RPAREN               : 18 44 64 69 70 71 72 73 74 75 76 77 78 79
SELECT               : 20 31
SEMICOLON            : 11 12 13 16 19 20 42 43
SIN                  : 69
SQRT                 : 74
STAR                 : 35 59
TAN                  : 71
WHERE                : 21 30
error                : 

Nonterminals, with rules where they appear

all_from             : 28
apply_stmt           : 5
arg_list             : 18 69 70 71 72 73 74 75 76 77 78 79
const_decl           : 10
create_stmt          : 4
empty                : 22 25 46 81
expr                 : 11 21 30 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 64 82 83
expr_list            : 80 83
gate_call            : 16
gate_def             : 8
input_stmt           : 9
measure_stmt         : 6
param_list           : 44
param_tail           : 45 48
program              : 0
qubit                : 26
qubit_index          : 33
select_expr          : 27
select_stmt          : 7
single_target        : 23 24
size_expr            : 12 13
statement            : 2 3
statement_list       : 1 2 44
target_list          : 16 42 42 43
target_tail          : 23 24
where_clause         : 20 31

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement statement_list
    (3) statement_list -> . statement
    (4) statement -> . create_stmt
    (5) statement -> . apply_stmt
    (6) statement -> . measure_stmt
    (7) statement -> . select_stmt
    (8) statement -> . gate_def
    (9) statement -> . input_stmt
    (10) statement -> . const_decl
    (12) create_stmt -> . CREATE QUBITS IDENT LBRACKET size_expr RBRACKET SEMICOLON
    (13) create_stmt -> . CREATE BITS IDENT LBRACKET size_expr RBRACKET SEMICOLON
    (16) apply_stmt -> . APPLY gate_call ON target_list SEMICOLON
    (42) measure_stmt -> . MEASURE target_list ARROW target_list SEMICOLON
    (43) measure_stmt -> . MEASURE target_list SEMICOLON
    (20) select_stmt -> . SELECT IDENT FROM IDENT where_clause SEMICOLON
    (44) gate_def -> . GATE IDENT LPAREN param_list RPAREN LBRACE statement_list RBRACE
    (19) input_stmt -> . INPUT IDENT SEMICOLON
    (11) const_decl -> . CONST IDENT ASSIGN expr SEMICOLON

    CREATE          shift and go to state 11
    APPLY           shift and go to state 12
    MEASURE         shift and go to state 13
    SELECT          shift and go to state 14
    GATE            shift and go to state 15
    INPUT           shift and go to state 16
    CONST           shift and go to state 17

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    create_stmt                    shift and go to state 4
    apply_stmt                     shift and go to state 5
    measure_stmt                   shift and go to state 6
    select_stmt                    shift and go to state 7
    gate_def                       shift and go to state 8
    input_stmt                     shift and go to state 9
    const_decl                     shift and go to state 10

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .

    $end            reduce using rule 1 (program -> statement_list .)


state 3

    (2) statement_list -> statement . statement_list
    (3) statement_list -> statement .
    (2) statement_list -> . statement statement_list
    (3) statement_list -> . statement
    (4) statement -> . create_stmt
    (5) statement -> . apply_stmt
    (6) statement -> . measure_stmt
    (7) statement -> . select_stmt
    (8) statement -> . gate_def
    (9) statement -> . input_stmt
    (10) statement -> . const_decl
    (12) create_stmt -> . CREATE QUBITS IDENT LBRACKET size_expr RBRACKET SEMICOLON
    (13) create_stmt -> . CREATE BITS IDENT LBRACKET size_expr RBRACKET SEMICOLON
    (16) apply_stmt -> . APPLY gate_call ON target_list SEMICOLON
    (42) measure_stmt -> . MEASURE target_list ARROW target_list SEMICOLON
    (43) measure_stmt -> . MEASURE target_list SEMICOLON
    (20) select_stmt -> . SELECT IDENT FROM IDENT where_clause SEMICOLON
    (44) gate_def -> . GATE IDENT LPAREN param_list RPAREN LBRACE statement_list RBRACE
    (19) input_stmt -> . INPUT IDENT SEMICOLON
    (11) const_decl -> . CONST IDENT ASSIGN expr SEMICOLON

    $end            reduce using rule 3 (statement_list -> statement .)
    RBRACE          reduce using rule 3 (statement_list -> statement .)
    CREATE          shift and go to state 11
    APPLY           shift and go to state 12
    MEASURE         shift and go to state 13
    SELECT          shift and go to state 14
    GATE            shift and go to state 15
    INPUT           shift and go to state 16
    CONST           shift and go to state 17

    statement                      shift and go to state 3
    statement_list                 shift and go to state 18
    create_stmt                    shift and go to state 4
    apply_stmt                     shift and go to state 5
    measure_stmt                   shift and go to state 6
    select_stmt                    shift and go to state 7
    gate_def                       shift and go to state 8
    input_stmt                     shift and go to state 9
    const_decl                     shift and go to state 10

state 4

    (4) statement -> create_stmt .

    CREATE          reduce using rule 4 (statement -> create_stmt .)
    APPLY           reduce using rule 4 (statement -> create_stmt .)
    MEASURE         reduce using rule 4 (statement -> create_stmt .)
    SELECT          reduce using rule 4 (statement -> create_stmt .)
    GATE            reduce using rule 4 (statement -> create_stmt .)
    INPUT           reduce using rule 4 (statement -> create_stmt .)
    CONST           reduce using rule 4 (statement -> create_stmt .)
    $end            reduce using rule 4 (statement -> create_stmt .)
    RBRACE          reduce using rule 4 (statement -> create_stmt .)


state 5

    (5) statement -> apply_stmt .

    CREATE          reduce using rule 5 (statement -> apply_stmt .)
    APPLY           reduce using rule 5 (statement -> apply_stmt .)
    MEASURE         reduce using rule 5 (statement -> apply_stmt .)
    SELECT          reduce using rule 5 (statement -> apply_stmt .)
    GATE            reduce using rule 5 (statement -> apply_stmt .)
    INPUT           reduce using rule 5 (statement -> apply_stmt .)
    CONST           reduce using rule 5 (statement -> apply_stmt .)
    $end            reduce using rule 5 (statement -> apply_stmt .)
    RBRACE          reduce using rule 5 (statement -> apply_stmt .)


state 6

    (6) statement -> measure_stmt .

    CREATE          reduce using rule 6 (statement -> measure_stmt .)
    APPLY           reduce using rule 6 (statement -> measure_stmt .)
    MEASURE         reduce using rule 6 (statement -> measure_stmt .)
    SELECT          reduce using rule 6 (statement -> measure_stmt .)
    GATE            reduce using rule 6 (statement -> measure_stmt .)
    INPUT           reduce using rule 6 (statement -> measure_stmt .)
    CONST           reduce using rule 6 (statement -> measure_stmt .)
    $end            reduce using rule 6 (statement -> measure_stmt .)
    RBRACE          reduce using rule 6 (statement -> measure_stmt .)


state 7

    (7) statement -> select_stmt .

    CREATE          reduce using rule 7 (statement -> select_stmt .)
    APPLY           reduce using rule 7 (statement -> select_stmt .)
    MEASURE         reduce using rule 7 (statement -> select_stmt .)
    SELECT          reduce using rule 7 (statement -> select_stmt .)
    GATE            reduce using rule 7 (statement -> select_stmt .)
    INPUT           reduce using rule 7 (statement -> select_stmt .)
    CONST           reduce using rule 7 (statement -> select_stmt .)
    $end            reduce using rule 7 (statement -> select_stmt .)
    RBRACE          reduce using rule 7 (statement -> select_stmt .)


state 8

    (8) statement -> gate_def .

    CREATE          reduce using rule 8 (statement -> gate_def .)
    APPLY           reduce using rule 8 (statement -> gate_def .)
    MEASURE         reduce using rule 8 (statement -> gate_def .)
    SELECT          reduce using rule 8 (statement -> gate_def .)
    GATE            reduce using rule 8 (statement -> gate_def .)
    INPUT           reduce using rule 8 (statement -> gate_def .)
    CONST           reduce using rule 8 (statement -> gate_def .)
    $end            reduce using rule 8 (statement -> gate_def .)
    RBRACE          reduce using rule 8 (statement -> gate_def .)


state 9

    (9) statement -> input_stmt .

    CREATE          reduce using rule 9 (statement -> input_stmt .)
    APPLY           reduce using rule 9 (statement -> input_stmt .)
    MEASURE         reduce using rule 9 (statement -> input_stmt .)
    SELECT          reduce using rule 9 (statement -> input_stmt .)
    GATE            reduce using rule 9 (statement -> input_stmt .)
    INPUT           reduce using rule 9 (statement -> input_stmt .)
    CONST           reduce using rule 9 (statement -> input_stmt .)
    $end            reduce using rule 9 (statement -> input_stmt .)
    RBRACE          reduce using rule 9 (statement -> input_stmt .)


state 10

    (10) statement -> const_decl .

    CREATE          reduce using rule 10 (statement -> const_decl .)
    APPLY           reduce using rule 10 (statement -> const_decl .)
    MEASURE         reduce using rule 10 (statement -> const_decl .)
    SELECT          reduce using rule 10 (statement -> const_decl .)
    GATE            reduce using rule 10 (statement -> const_decl .)
    INPUT           reduce using rule 10 (statement -> const_decl .)
    CONST           reduce using rule 10 (statement -> const_decl .)
    $end            reduce using rule 10 (statement -> const_decl .)
    RBRACE          reduce using rule 10 (statement -> const_decl .)


state 11

    (12) create_stmt -> CREATE . QUBITS IDENT LBRACKET size_expr RBRACKET SEMICOLON
    (13) create_stmt -> CREATE . BITS IDENT LBRACKET size_expr RBRACKET SEMICOLON

    QUBITS          shift and go to state 19
    BITS            shift and go to state 20


state 12

    (16) apply_stmt -> APPLY . gate_call ON target_list SEMICOLON
    (17) gate_call -> . IDENT
    (18) gate_call -> . IDENT LPAREN arg_list RPAREN

    IDENT           shift and go to state 22

    gate_call                      shift and go to state 21

state 13

    (42) measure_stmt -> MEASURE . target_list ARROW target_list SEMICOLON
    (43) measure_stmt -> MEASURE . target_list SEMICOLON
    (23) target_list -> . single_target target_tail
    (26) single_target -> . qubit
    (27) single_target -> . select_expr
    (28) single_target -> . all_from
    (32) qubit -> . IDENT
    (33) qubit -> . IDENT LBRACKET qubit_index RBRACKET
    (31) select_expr -> . SELECT IDENT FROM IDENT where_clause
    (29) all_from -> . ALL FROM IDENT
    (30) all_from -> . ALL FROM IDENT WHERE expr

    IDENT           shift and go to state 28
    SELECT          shift and go to state 29
    ALL             shift and go to state 30

    target_list                    shift and go to state 23
    single_target                  shift and go to state 24
    qubit                          shift and go to state 25
    select_expr                    shift and go to state 26
    all_from                       shift and go to state 27

state 14

    (20) select_stmt -> SELECT . IDENT FROM IDENT where_clause SEMICOLON

    IDENT           shift and go to state 31


state 15

    (44) gate_def -> GATE . IDENT LPAREN param_list RPAREN LBRACE statement_list RBRACE

    IDENT           shift and go to state 32


state 16

    (19) input_stmt -> INPUT . IDENT SEMICOLON

    IDENT           shift and go to state 33


state 17

    (11) const_decl -> CONST . IDENT ASSIGN expr SEMICOLON

    IDENT           shift and go to state 34


state 18

    (2) statement_list -> statement statement_list .

    $end            reduce using rule 2 (statement_list -> statement statement_list .)
    RBRACE          reduce using rule 2 (statement_list -> statement statement_list .)


state 19

    (12) create_stmt -> CREATE QUBITS . IDENT LBRACKET size_expr RBRACKET SEMICOLON

    IDENT           shift and go to state 35


state 20

    (13) create_stmt -> CREATE BITS . IDENT LBRACKET size_expr RBRACKET SEMICOLON

    IDENT           shift and go to state 36


state 21

    (16) apply_stmt -> APPLY gate_call . ON target_list SEMICOLON

    ON              shift and go to state 37


state 22

    (17) gate_call -> IDENT .
    (18) gate_call -> IDENT . LPAREN arg_list RPAREN

    ON              reduce using rule 17 (gate_call -> IDENT .)
    LPAREN          shift and go to state 38


state 23

    (42) measure_stmt -> MEASURE target_list . ARROW target_list SEMICOLON
    (43) measure_stmt -> MEASURE target_list . SEMICOLON

    ARROW           shift and go to state 39
    SEMICOLON       shift and go to state 40


state 24

    (23) target_list -> single_target . target_tail
    (24) target_tail -> . COMMA single_target target_tail
    (25) target_tail -> . empty
    (84) empty -> .

    COMMA           shift and go to state 42
    ARROW           reduce using rule 84 (empty -> .)
    SEMICOLON       reduce using rule 84 (empty -> .)

    target_tail                    shift and go to state 41
    empty                          shift and go to state 43

state 25

    (26) single_target -> qubit .

    COMMA           reduce using rule 26 (single_target -> qubit .)
    ARROW           reduce using rule 26 (single_target -> qubit .)
    SEMICOLON       reduce using rule 26 (single_target -> qubit .)


state 26

    (27) single_target -> select_expr .

    COMMA           reduce using rule 27 (single_target -> select_expr .)
    ARROW           reduce using rule 27 (single_target -> select_expr .)
    SEMICOLON       reduce using rule 27 (single_target -> select_expr .)


state 27

    (28) single_target -> all_from .

    COMMA           reduce using rule 28 (single_target -> all_from .)
    ARROW           reduce using rule 28 (single_target -> all_from .)
    SEMICOLON       reduce using rule 28 (single_target -> all_from .)


state 28

    (32) qubit -> IDENT .
    (33) qubit -> IDENT . LBRACKET qubit_index RBRACKET

    COMMA           reduce using rule 32 (qubit -> IDENT .)
    ARROW           reduce using rule 32 (qubit -> IDENT .)
    SEMICOLON       reduce using rule 32 (qubit -> IDENT .)
    LBRACKET        shift and go to state 44


state 29

    (31) select_expr -> SELECT . IDENT FROM IDENT where_clause

    IDENT           shift and go to state 45


state 30

    (29) all_from -> ALL . FROM IDENT
    (30) all_from -> ALL . FROM IDENT WHERE expr

    FROM            shift and go to state 46


state 31

    (20) select_stmt -> SELECT IDENT . FROM IDENT where_clause SEMICOLON

    FROM            shift and go to state 47


state 32

    (44) gate_def -> GATE IDENT . LPAREN param_list RPAREN LBRACE statement_list RBRACE

    LPAREN          shift and go to state 48


state 33

    (19) input_stmt -> INPUT IDENT . SEMICOLON

    SEMICOLON       shift and go to state 49


state 34

    (11) const_decl -> CONST IDENT . ASSIGN expr SEMICOLON

    ASSIGN          shift and go to state 50


state 35

    (12) create_stmt -> CREATE QUBITS IDENT . LBRACKET size_expr RBRACKET SEMICOLON

    LBRACKET        shift and go to state 51


state 36

    (13) create_stmt -> CREATE BITS IDENT . LBRACKET size_expr RBRACKET SEMICOLON

    LBRACKET        shift and go to state 52


state 37

    (16) apply_stmt -> APPLY gate_call ON . target_list SEMICOLON
    (23) target_list -> . single_target target_tail
    (26) single_target -> . qubit
    (27) single_target -> . select_expr
    (28) single_target -> . all_from
    (32) qubit -> . IDENT
    (33) qubit -> . IDENT LBRACKET qubit_index RBRACKET
    (31) select_expr -> . SELECT IDENT FROM IDENT where_clause
    (29) all_from -> . ALL FROM IDENT
    (30) all_from -> . ALL FROM IDENT WHERE expr

    IDENT           shift and go to state 28
    SELECT          shift and go to state 29
    ALL             shift and go to state 30

    target_list                    shift and go to state 53
    single_target                  shift and go to state 24
    qubit                          shift and go to state 25
    select_expr                    shift and go to state 26
    all_from                       shift and go to state 27

state 38

    (18) gate_call -> IDENT LPAREN . arg_list RPAREN
    (80) arg_list -> . expr_list
    (81) arg_list -> . empty
    (82) expr_list -> . expr
    (83) expr_list -> . expr COMMA expr_list
    (84) empty -> .
    (49) expr -> . expr AND expr
    (50) expr -> . expr OR expr
    (51) expr -> . expr EQEQ expr
    (52) expr -> . expr NE expr
    (53) expr -> . expr LT expr
    (54) expr -> . expr GT expr
    (55) expr -> . expr LE expr
    (56) expr -> . expr GE expr
    (57) expr -> . expr PLUS expr
    (58) expr -> . expr MINUS expr
    (59) expr -> . expr STAR expr
    (60) expr -> . expr DIVIDE expr
    (61) expr -> . expr PERCENT expr
    (62) expr -> . expr POWER expr
    (63) expr -> . MINUS expr
    (64) expr -> . LPAREN expr RPAREN
    (65) expr -> . INT
    (66) expr -> . FLOAT
    (67) expr -> . PI
    (68) expr -> . IDENT
    (69) expr -> . SIN LPAREN arg_list RPAREN
    (70) expr -> . COS LPAREN arg_list RPAREN
    (71) expr -> . TAN LPAREN arg_list RPAREN
    (72) expr -> . EXP LPAREN arg_list RPAREN
    (73) expr -> . LOG LPAREN arg_list RPAREN
    (74) expr -> . SQRT LPAREN arg_list RPAREN
    (75) expr -> . ABS LPAREN arg_list RPAREN
    (76) expr -> . ASIN LPAREN arg_list RPAREN
    (77) expr -> . ACOS LPAREN arg_list RPAREN
    (78) expr -> . ATAN LPAREN arg_list RPAREN
    (79) expr -> . IDENT LPAREN arg_list RPAREN

    RPAREN          reduce using rule 84 (empty -> .)
    MINUS           shift and go to state 60
    LPAREN          shift and go to state 55
    INT             shift and go to state 61
    FLOAT           shift and go to state 62
    PI              shift and go to state 63
    IDENT           shift and go to state 54
    SIN             shift and go to state 64
    COS             shift and go to state 65
    TAN             shift and go to state 66
    EXP             shift and go to state 67
    LOG             shift and go to state 68
    SQRT            shift and go to state 69
    ABS             shift and go to state 70
    ASIN            shift and go to state 71
    ACOS            shift and go to state 72
    ATAN            shift and go to state 73

    arg_list                       shift and go to state 56
    expr_list                      shift and go to state 57
    empty                          shift and go to state 58
    expr                           shift and go to state 59

state 39

    (42) measure_stmt -> MEASURE target_list ARROW . target_list SEMICOLON
    (23) target_list -> . single_target target_tail
    (26) single_target -> . qubit
    (27) single_target -> . select_expr
    (28) single_target -> . all_from
    (32) qubit -> . IDENT
    (33) qubit -> . IDENT LBRACKET qubit_index RBRACKET
    (31) select_expr -> . SELECT IDENT FROM IDENT where_clause
    (29) all_from -> . ALL FROM IDENT
    (30) all_from -> . ALL FROM IDENT WHERE expr

    IDENT           shift and go to state 28
    SELECT          shift and go to state 29
    ALL             shift and go to state 30

    target_list                    shift and go to state 74
    single_target                  shift and go to state 24
    qubit                          shift and go to state 25
    select_expr                    shift and go to state 26
    all_from                       shift and go to state 27

state 40

    (43) measure_stmt -> MEASURE target_list SEMICOLON .

    CREATE          reduce using rule 43 (measure_stmt -> MEASURE target_list SEMICOLON .)
    APPLY           reduce using rule 43 (measure_stmt -> MEASURE target_list SEMICOLON .)
    MEASURE         reduce using rule 43 (measure_stmt -> MEASURE target_list SEMICOLON .)
    SELECT          reduce using rule 43 (measure_stmt -> MEASURE target_list SEMICOLON .)
    GATE            reduce using rule 43 (measure_stmt -> MEASURE target_list SEMICOLON .)
    INPUT           reduce using rule 43 (measure_stmt -> MEASURE target_list SEMICOLON .)
    CONST           reduce using rule 43 (measure_stmt -> MEASURE target_list SEMICOLON .)
    $end            reduce using rule 43 (measure_stmt -> MEASURE target_list SEMICOLON .)
    RBRACE          reduce using rule 43 (measure_stmt -> MEASURE target_list SEMICOLON .)


state 41

    (23) target_list -> single_target target_tail .

    ARROW           reduce using rule 23 (target_list -> single_target target_tail .)
    SEMICOLON       reduce using rule 23 (target_list -> single_target target_tail .)


state 42

    (24) target_tail -> COMMA . single_target target_tail
    (26) single_target -> . qubit
    (27) single_target -> . select_expr
    (28) single_target -> . all_from
    (32) qubit -> . IDENT
    (33) qubit -> . IDENT LBRACKET qubit_index RBRACKET
    (31) select_expr -> . SELECT IDENT FROM IDENT where_clause
    (29) all_from -> . ALL FROM IDENT
    (30) all_from -> . ALL FROM IDENT WHERE expr

    IDENT           shift and go to state 28
    SELECT          shift and go to state 29
    ALL             shift and go to state 30
